force-app/main/default/objects/LPCR_LienFamilleFacture__c/LPCR_LienFamilleFacture__c.object-meta.xml
<CustomObject>
    <label>Lien Famille et Facture</label>
    <nameField>
        <displayFormat>LFF-{0000}</displayFormat>
        <label>Lien Famille et Facture Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liens Familles et Factures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>