force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LCPR_Devis__c.field-meta.xml
<CustomField>
    <fullName>LCPR_Devis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Liens Familles et Factures</relationshipLabel>
    <relationshipName>Liens_Familles_et_Factures</relationshipName>
    <type>Lookup</type>
</CustomField>