force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LCPR_Facture__c.field-meta.xml
<CustomField>
    <fullName>LCPR_Facture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facture</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Liens Familles et Factures</relationshipLabel>
    <relationshipName>Liens_Familles_et_Factures</relationshipName>
    <type>Lookup</type>
</CustomField>