force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LCPR_LigneFacture__c.field-meta.xml
<CustomField>
    <fullName>LCPR_LigneFacture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne de Facture</label>
    <referenceTo>blng__InvoiceLine__c</referenceTo>
    <relationshipLabel>Liens Familles et Factures</relationshipLabel>
    <relationshipName>Liens_Familles_et_Factures</relationshipName>
    <type>Lookup</type>
</CustomField>