force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LCPR_RevenueTransaction__c.field-meta.xml
<CustomField>
    <fullName>LCPR_RevenueTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Transaction</label>
    <referenceTo>blng__RevenueTransaction__c</referenceTo>
    <relationshipLabel>Liens Familles et Factures</relationshipLabel>
    <relationshipName>Liens_Familles_et_Factures</relationshipName>
    <type>Lookup</type>
</CustomField>