force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LPCR_BonAchat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BonAchat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bon d&apos;achat</label>
    <referenceTo>LPCR_BonAchatPartenaire__c</referenceTo>
    <relationshipLabel>Liens Familles et Factures</relationshipLabel>
    <relationshipName>Liens_Familles_et_Factures</relationshipName>
    <type>Lookup</type>
</CustomField>