force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LPCR_Compte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Compte__c</fullName>
    <formula>LPCR_Facture__r.blng__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compte</label>
    <type>Text</type>
</CustomField>