force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LPCR_Contrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Contrat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Liens Familles et Factures</relationshipLabel>
    <relationshipName>LiensFamillesFactures</relationshipName>
    <type>Lookup</type>
</CustomField>