force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LPCR_ContratEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratEntreprise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat Entreprise</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Liens Familles et Factures (Contrat Entreprise)</relationshipLabel>
    <relationshipName>Liens_Familles_et_Factures_B2B</relationshipName>
    <type>Lookup</type>
</CustomField>