force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LPCR_ContratFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratFamille__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat Famille</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Liens Familles et Factures</relationshipLabel>
    <relationshipName>Liens_Familles_et_Factures_B2C</relationshipName>
    <type>Lookup</type>
</CustomField>