force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LPCR_DateFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateFacturation__c</fullName>
    <formula>LPCR_Facture__r.blng__InvoiceDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de Facturation</label>
    <type>Date</type>
</CustomField>