force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LPCR_Enfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Enfant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LPCR_Enfant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Liens Familles et Factures</relationshipLabel>
    <relationshipName>Liens_Familles_et_Factures</relationshipName>
    <type>Lookup</type>
</CustomField>