force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LPCR_EntiteJuridique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EntiteJuridique__c</fullName>
    <formula>LPCR_Contrat__r.LPCR_Creche__r.LPCR_EntiteJuridique__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entité Juridique</label>
    <type>Text</type>
</CustomField>