force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LPCR_EnvoyerFaitPar__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EnvoyerFaitPar__c</fullName>
    <formula>LPCR_Facture__r.blng__InvoiceRunCreatedBy__r.LPCR_EnvoyerFaitPar__r.FirstName &amp;&quot; &quot;&amp;  LPCR_Facture__r.blng__InvoiceRunCreatedBy__r.LPCR_EnvoyerFaitPar__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Envoyer fait par</label>
    <type>Text</type>
</CustomField>