force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/LPCR_TotalFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TotalFacture__c</fullName>
    <formula>LPCR_Facture__r.blng__TotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Facture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>