force-app/main/default/objects/LPCR_LienFamilleFacture__c/fields/Tech_InformationsFamille__c.field-meta.xml
<CustomField>
    <fullName>Tech_InformationsFamille__c</fullName>
    <description>Informations famille affichées sur la facture B2B</description>
    <formula>IF(LPCR_Facture__r.blng__Account__r.LPCR_AfficherNomsFamillesFacture__c,LPCR_ContratFamille__r.Account.Name &amp; BR(),&apos;&apos;)
&amp;IF(LPCR_Facture__r.blng__Account__r.LPCR_AfficherNomsEnfantsFacture__c,&apos;Enfant &apos;&amp; LPCR_ContratFamille__r.LPCR_ContactEnfant__r.FirstName &amp;&apos; &apos;&amp;LPCR_ContratFamille__r.LPCR_ContactEnfant__r.LastName &amp;BR(),&apos;&apos;)
&amp;IF( LPCR_Facture__r.blng__Account__r.LPCR_AfficherInfosFamillesFacture__c ,LPCR_ContratFamille__r.Account.LPCR_InformationsFacture__c,&apos;&apos;)</formula>
    <inlineHelpText>Informations famille affichées sur la facture B2B</inlineHelpText>
    <label>Tech_InformationsFamille</label>
    <type>Text</type>
</CustomField>